# opalite

./: Cargo.toml  README.md
examples/simple/: Cargo.toml  Opalite.ron
examples/simple/src/: main.rs  map.rs
opalite/: Cargo.toml  Opalite.ron
opalite/resources/shaders/: main.frag.glsl  main.vert.glsl  ui.frag.glsl  ui.vert.glsl
opalite/src/: ai.rs  component_store.rs  config.rs  game_loop.rs  input_events.rs  lib.rs  map.rs  message.rs  mutex_ext.rs  opal.rs  picker.rs  resources.rs  store.rs  system.rs
opalite/src/gluon_api/: cgmath.rs  conrod.rs  macros.rs  mod.rs  prelude.rs
opalite/src/opal/: builder.rs  default_systems.rs  mod.rs  opal.rs
opalite/src/render/: mod.rs
opalite/src/renderer/: allocators.rs  buffer.rs  camera.rs  conv.rs  framebuffers.rs  image.rs  light.rs  material.rs  mod.rs  model.rs  pipeline.rs  push_constant.rs  shader.rs
opalite/src/renderer/pipe/: main_pipe.rs  mod.rs  ui_pipe.rs
opalite_macro/: Cargo.toml
opalite_macro/src/: lib.rs
