[package]
name = "opalite"
version = "0.1.0"
authors = ["Callym <hi@callym.com>"]

[dependencies]
opalite_macro = { path = "../opalite_macro", features = ["internal"] }
bincode = "1.0"
cgmath = { version = "0.16", features = ["serde", "simd", "swizzle"] }
failure = "0.1"
failure_derive = "0.1"
gfx_window_glutin = "0.12"
glsl-to-spirv = "0.1"
owning_ref = "0.3"
ron = "0.2"
serde = "1.0"
serde_derive = "1.0"
specs = "0.10"
specs-derive = "0.1"
winit = "0.10"
uuid = { version = "0.5", features = ["v4"] }

[dependencies.futures]
git = "https://github.com/rust-lang-nursery/futures-rs"
rev = "a7d08e6"

# baae50e - Jan 2nd (before the mapping functions were temporarily removed)
[dependencies.gfx-hal]
git = "https://github.com/gfx-rs/gfx"
rev = "1f880b8"

[dependencies.gfx-backend-dx12]
git = "https://github.com/gfx-rs/gfx"
rev = "1f880b8"

[dependencies.gfx-backend-vulkan]
git = "https://github.com/gfx-rs/gfx"
rev = "1f880b8"
