[package]
name = "opalite"
version = "0.1.0"
authors = ["Callym <hi@callym.com>"]

[dependencies]
opalite_macro = { path = "../opalite_macro", features = ["internal"] }
anymap = "0.12"
bincode = "1.0"
cgmath = { version = "0.16", features = ["serde", "simd", "swizzle"] }
conrod = { git = "https://github.com/callym/conrod", features = ["winit"] }
conrod_derive = "=0.1.0"
failure = "0.1"
failure_derive = "0.1"
glsl-to-spirv = "0.1"
gluon = "0.7.1"
gluon_vm = "0.7.1"
image = "0.18"
ordered-float = "0.5"
owning_ref = "0.3"
ron = "0.2"
serde = "1.0"
serde_derive = "1.0"
specs = "0.10"
specs-derive = "0.1"
winit = "0.11"
uuid = { version = "0.5", features = ["v4"] }

[dependencies.gfx-hal]
git = "https://github.com/gfx-rs/gfx"
rev = "b75b8f5"

[dependencies.gfx-backend-dx12]
git = "https://github.com/gfx-rs/gfx"
rev = "b75b8f5"

[dependencies.gfx-backend-vulkan]
git = "https://github.com/gfx-rs/gfx"
rev = "b75b8f5"
